# otus_008_print_ip

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_8txt.html  Doxyfile  annotated.html  dir_000000_000001.html  dir_000001_000002.html  dir_0619a8f54b4fad7043a6de45be8fde0b.html  dir_5c9827f39abcc28a92e5a02429a0e390.html  dir_5c9827f39abcc28a92e5a02429a0e390_dep.map  dir_5c9827f39abcc28a92e5a02429a0e390_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  doxygen.css  files.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_1.map  inherit_graph_2.map  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_6.map  inherit_graph_6.md5  inherits.html  link_8txt.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  namespacemembers.html  namespacemembers_func.html  (+28 more)
doc/: Doxyfile
html/: classes.html  dir_000001_000002.html  dir_5c9827f39abcc28a92e5a02429a0e390_dep.map  dir_5c9827f39abcc28a92e5a02429a0e390_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  functions.html  functions_func.html  globals_vars.html  graph_legend.html  inherit_graph_0.md5  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_4.map  inherit_graph_5.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  namespaceIp__NS.html  pages.html  print_8h__dep__incl.map  print_8h__incl.map  structIp__NS_1_1print__tuple__item.html  structIp__NS_1_1print__tuple__item_3_01__max__idx_00_01__max__idx_00_01Args_8_8_8_01_4-members.html  structIp__NS_1_1print__tuple__item_3_01__max__idx_00_01__max__idx_00_01Args_8_8_8_01_4.html  structare__same__type.html  structare__same__type_3_01__E__lhs_00_01__E__rhs_00_01__E_8_8_8_01_4.html  structare__same__type_3_01__E__lhs_00_01__E__rhs_01_4-members.html  structis__container_3_01std_1_1list_3_01__Args_8_8_8_01_4_01_4.html  structis__container_3_01std_1_1list_3_01__Args_8_8_8_01_4_01_4__coll__graph.map  structis__container_3_01std_1_1list_3_01__Args_8_8_8_01_4_01_4__inherit__graph.md5  structis__container_3_01std_1_1vector_3_01__Args_8_8_8_01_4_01_4.html  structis__container_3_01std_1_1vector_3_01__Args_8_8_8_01_4_01_4__coll__graph.map  structis__container_3_01std_1_1vector_3_01__Args_8_8_8_01_4_01_4__inherit__graph.md5  structis__container__coll__graph.md5  structis__container__inherit__graph.map  (+5 more)
src/: CMakeLists.txt  main.cpp
src/ip/: print.cpp  print.h
src/utility/: type_traits.h
test/src/: CMakeLists.txt  test_print_ip.cpp
(+20 files in other folders)
